src/less/main.less
@import "variables";
@import "mixins";


/** Main rules **/
*, ::after, ::before {
  box-sizing: border-box;
  line-height: 180%;
}


/** Body **/
html, body {
  text-align: center;
  background: @back;
}

div.container {
  margin: 0px 15% 0px 10%;
  width: 75%;
  text-align: left;
}

/** Titles **/
h1, h2, h3, h4 {
  margin-top: 0;
}
h1 {
  .sintony;
  color: @violet;
  font-size: 36px;
}
p.tagline {
  .clearsans;
  color: @violet;
  font-size: 18px;
}
h2 { .clearsans-bold; }


/** Sections **/
div.container > header {
  margin-top: 43px;
  height: ~"calc(100vw / 3)";
  min-height: 250px;
  position: relative;
  &:before {
    content: ' ';
    font-size: 1px;
    display: block;
    float: left;
    width: 6px;
    background: @blue;
    height: ~"calc(100vw / 4)";
  }

  h1, p.tagline {
    padding: 0px 27px;
  }
  .see-all-content {
    color: @blue;
    font-size: 18px;
    position: absolute;
    bottom: 40px;
    right: 40px;
    .sintony;
    text-decoration: none;
    &:after {
      .shortline-hr;
      content: ' ';
      height: 6px;
      float: right;
      background: @blue;
      clear: both;
      margin-top: 28px;
      right: 0;
      position: absolute;
    }
  }
}

.message {
  height: auto;
  min-height: ~"calc(100vw / 2)";
//  min-height: 250px;
  position: relative;
  article {
    header {
      width: 100%;
      height: 100%;
      display: block;
      clear: both;
      &:after {
        display: block;
        content: ' ';
        clear: both;
      }
      .counter {
        vertical-align: bottom;
        width: 36px;
        font-size: 36px;
        float: left;
        height: 86px;
        padding-top: 29px;
        .sintony;
        color: @blue;
      }
      h2 {
        .sintony;
        color: @blue;
        font-size: 24px;
        width: ~"calc(100% - 36px)";
        float: left;
        height: 86px;
        margin-bottom: 0px;

      }
    }
    .content {
      position: relative;
      display: block;
      float: left;
      width: ~"calc(50% - 72px)";
      padding: 15px 18px;
      margin: 0px 36px;
      color: @purple;
      .clearsans;
      .transition;
      &:before {
        .transition;
        height: 0px;
        width: 6px;
        background: transparent;
        position: absolute;
        display: block;
        left: 0px;
        top: 15px;
        content: ' ';
      }
      &.shown:before {
        .transition;
        .shortline-vr;
        width: 6px;
        content: ' ';
        background: @violet;
        position: absolute;
        display: block;
        left: 0px;
        top: 15px;
      }

      .toggle {
        .sintony;
        color: @violet;
        font-size: 18px;
        position: relative;
        text-decoration: none;
        .transition;
        &:after {
          .shortline-hr;
          content: ' ';
          height: 6px;
          float: right;
          background: @violet;
          clear: both;
          margin-top: 28px;
          left: 0;
          position: absolute;
        }
        &.toggle-clear:after {
          .transition;
          width: 0px;
          background: transparent;
        }
        &:hover {
          color: @blue;
          &:after {
            background: @blue;
          }
        }
      }
      .hilite {
        .clearsans-bold;
        line-height: 150%;
        margin-top: 10px;
      }
      a.research-link {
        .clearsans;
        color: @violet;
        text-decoration: underline;
      }
    }
  }

}

footer {
  .clearsans;
  color: @purple;
  text-align: left;
  font-size: 18px;
  border-top: 6px solid @blue;
  padding: 25px 50px;
  display: block;
  clear: both;
  margin-top: 30px;
  .made-by {
    width: 33%;
    margin-right: 9%;
    display: block;
    float: left;
    .logo {
      width: 50%;
      margin: 20px 0px;
      float: left;
      padding: 0px 15px;
      text-align: center;
      img {
        height: auto;
        max-width: 100%;
      }
    }
    .license {
      font-size: 12px;
      a { color: @purple; }
      .cc {
        max-width: 80px;
      }
    }
  }
  .partners {
    width: 58%;
    display: block;
    float: left;
    a {
      display: inline-block;
      width: 50%;
      float: left;
      clear: none;
      color: @blue;
      text-decoration: none;
      &:hover {
        text-decoration: underline;
      }
      &:nth-child(2){
        text-align: right;
      }
    }
    .logo_3 {
      width: 33.3333%;
      margin: 20px 0px;
      float: left;
      padding: 0px 15px;
      text-align: center;
      a { width: 100%; }
      img {
        height: auto;
        max-width: 100%;
      }
    }
    .logo_4 {
      width: 25%;
      margin: 20px 0px;
      float: left;
      padding: 0px 15px;
      text-align: center;
      a { width: 100%; }
      img {
        height: auto;
        max-width: 100%;
      }
    }
  }
  .liner, .logo-label {
    display: block;
    margin: 15px 0px;
    clear: both;
  }
}

@import "mobile";

